test/Fail/Issue1986u.err
Issue1986u.agda:21,1-22,2: error: [SplitError]
Cannot split into projections because not all clauses have a
projection copattern
when checking the definition of p
